# discord-tauri

./: .gitignore  README.md  package-lock.json  package.json
.github/: secret_scanning.yml
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/vencord/: browser.js
