[package]
name = "discord-tauri"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
rfd = "0.15"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ole", "Win32_System_Pipes", "Win32_UI_WindowsAndMessaging"] }
webview2-com = "0.38"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
